@@ -21,6 +21,13 @@
 # if not defined.
 com.openexchange.filestore.s3.[filestoreID].endpoint=
 
+# Specifies the name of the parent bucket to use. The bucket will be created
+# automatically if it not yet exists, however, it's still possible to use an
+# already existing one. There are some naming restrictions, please refer to 
+# http://docs.aws.amazon.com/AmazonS3/latest/dev/BucketRestrictions.html for
+# details. Required.
+com.openexchange.filestore.s3.[filestoreID].bucketName=
+
 # Configures the Amazon S3 region to use when creating new buckets. This value
 # is also used to pre-configure the client when no specific endpoint is set.
 # Possible values are "us-gov-west-1", "us-east-1", "us-west-1", "us-west-2", 
@@ -63,6 +70,7 @@ com.openexchange.filestore.s3.[filestoreID].encryption.rsa.password=
 # "./registerfilestore -t s3://radosgw":
 
 # com.openexchange.filestore.s3.radosgw.endpoint=http://radosgw.example.com
+# com.openexchange.filestore.s3.radosgw.bucketName=ox
 # com.openexchange.filestore.s3.radosgw.region=eu-west-1
 # com.openexchange.filestore.s3.radosgw.accessKey=AKIAIOSFODNN7EXAMPLE
 # com.openexchange.filestore.s3.radosgw.secretKey=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
